# axslcc

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_STATUS.md  README.md  REFACTORING_SUMMARY.md  TESTING_REPORT.md  spirv_glsl.patch  test_compile.sh
.github/workflows/: build.yml  dist.yml
cmake/: README.md.in
src/: CMakeLists.txt  axslc-spec.h  axslcc.cpp  compiler.cpp  compiler.h  cross_compiler.cpp  cross_compiler.h  dxc_compiler.cpp  dxc_compiler.h  dxc_reflection.cpp  fxc_compiler.cpp  fxc_compiler.h  glslcc.cpp  main.cpp  reflection.cpp  reflection.h  sc_writer.cpp  sc_writer.h  spirv_compiler.cpp  spirv_compiler.h  types.h  utils.cpp  utils.h  version.h
